<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="loginVC" id="BYZ-38-t0r" customClass="LoginViewController" customModule="TestsPDP" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tests PDP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhB-Wg-uCz">
                                <rect key="frame" x="125.5" y="144" width="163" height="42"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Ani-3N-uqg">
                                <rect key="frame" x="20" y="406.5" width="374" height="83"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r7b-bg-rEd">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="loginTextField"/>
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8kW-nJ-CIY">
                                        <rect key="frame" x="0.0" y="49" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="passwordTextField"/>
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j4w-tA-Lv9">
                                <rect key="frame" x="117" y="589.5" width="180" height="60"/>
                                <color key="backgroundColor" systemColor="labelColor"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="180" id="gGn-Su-ayd"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="loginButton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="onSignInButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2FJ-uf-uMZ"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="Ani-3N-uqg" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="3m0-rs-qBX"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ani-3N-uqg" secondAttribute="trailing" constant="20" id="A7e-oc-UfA"/>
                            <constraint firstItem="zhB-Wg-uCz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TF8-7s-IxE"/>
                            <constraint firstItem="j4w-tA-Lv9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bFi-6E-eaO"/>
                            <constraint firstItem="zhB-Wg-uCz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="j5x-r9-nDx"/>
                            <constraint firstItem="Ani-3N-uqg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="nTr-8y-1ge"/>
                            <constraint firstItem="j4w-tA-Lv9" firstAttribute="top" secondItem="Ani-3N-uqg" secondAttribute="bottom" constant="100" id="rg1-J7-FOI"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="loginTextField" destination="r7b-bg-rEd" id="eca-Vd-Twb"/>
                        <outlet property="passwordTextField" destination="8kW-nJ-CIY" id="cCD-Cy-DLB"/>
                        <outlet property="signInButton" destination="j4w-tA-Lv9" id="eJQ-sf-VHA"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="102.45535714285714"/>
        </scene>
        <!--Main View Controller-->
        <scene sceneID="JSo-We-FNz">
            <objects>
                <viewController storyboardIdentifier="mainVC" id="p2y-S8-iDC" customClass="MainViewController" customModule="TestsPDP" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Kn9-Rl-qKC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Application" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vdy-3R-xv6">
                                <rect key="frame" x="113.5" y="427" width="187" height="42"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="iIa-de-tFd"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="Vdy-3R-xv6" firstAttribute="centerX" secondItem="Kn9-Rl-qKC" secondAttribute="centerX" id="3ss-dz-dy9"/>
                            <constraint firstItem="Vdy-3R-xv6" firstAttribute="centerY" secondItem="Kn9-Rl-qKC" secondAttribute="centerY" id="Xe7-qt-asX"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4wU-v7-cs9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="935" y="102"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="labelColor">
            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
